[project]
name = "parsehub"
version = "1.4.12"
description = "支持AI总结的社交媒体聚合解析器"
readme = "README.md"
requires-python = ">=3.12.0"
authors = [
    { name = "梓澪", email = "zilingmio@gmail.com" }
]
license = { text = "MIT" }
dependencies = [
    "aiocache>=0.12.3",
    "aiofiles>=23.2,<24.dev0",
    "beautifulsoup4>=4.12.3",
    "dynamicadaptor>=0.5.2",
    "dynrender-skia>=0.2.5",
    "langchain>=0.2.5",
    "langchain-core>=0.2.8",
    "langchain-openai>=0.1.14",
    "loguru>=0.6.0",
    "openai>=1.54.5",
    "opencv-python>=4.10.0.84",
    "playwright>=1.48.0",
    "pydub>=0.25.1",
    "python-dotenv>=1.0.1",
    "tenacity>=8.5.0",
    "urlextract>=1.9.0",
    "yt-dlp",
    "textual>=1.0.0",
    "pyperclip>=1.9.0",
    "lxml>=5.3.0",
    "pyyaml>=6.0.2",
    "aiosqlite>=0.20.0",
    "click>=8.1.7",
    "rookiepy>=0.5.6",
    "fastapi>=0.112.1",
    "uvicorn>=0.30.6",
    "emoji>=2.14.0",
    "instaloader>=4.14",
    "pydantic>=1.10.19",
    "markdownify>=1.1.0",
    "markdown>=3.7",
    "requests",
    "skia-python>=87.6",
    "httpx>=0.24.1",
    "pydantic-settings>=2.10.1",
    "pydicom>=3.0.1",
    "pillow>=11.3.0",
    "pillow-heif>=1.1.1",
]
[tool.hatch.build.targets.wheel]
packages = ["src/parsehub"]

[project.urls]
Repository = "https://github.com/z-mio/parsehub"
Issues = "https://github.com/z-mio/parsehub/issues"

[tool.ruff]
line-length = 120
exclude = [
    "test",
    "src/parsehub/deps/xhs"
]

[tool.ruff.lint]
select = [
    "E", # pycodestyle 错误检查
    "W", # pycodestyle 警告检查
    "F", # pyflakes 错误检查
    "I", # isort 导入排序
    "B", # flake8-bugbear 常见错误检查
    "C4", # flake8-comprehensions 列表/字典推导式检查
    "UP", # pyupgrade 自动升级语法
]
ignore = [
    "B008", # 不在参数默认值中执行函数调用
    "C901", # 函数复杂度过高
]

